test/functions/export/export-where.good
export-where.chpl:5: error: Exported functions cannot have where clauses.
